@@ -1,0 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/EditItemCardView"
+    android:clipChildren="false">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="32dp">
+
+        <TextView
+            android:text="@string/share_app_title"
+            style="@style/Headline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chips"
+            android:layout_marginTop="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:chipSpacing="16dp"
+            android:layout_marginBottom="16dp">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/share_sms"
+                android:text="@string/share_via_sms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipIcon="@drawable/vd_sms"
+                app:iconStartPadding="12dp"
+                app:chipIconSize="16dp"
+                app:chipBackgroundColor="?attr/colorAccent"
+                android:textColor="@color/transparent_white"
+                app:chipIconTint="@color/transparent_white"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/share_email"
+                android:text="@string/share_via_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:chipIcon="@drawable/vd_email"
+                app:iconStartPadding="12dp"
+                app:chipIconSize="16dp"
+                app:chipBackgroundColor="?attr/colorAccent"
+                android:textColor="@color/transparent_white"
+                app:chipIconTint="@color/transparent_white"/>
+
+        </com.google.android.material.chip.ChipGroup>
+
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
