@@ -16,6 +16,9 @@
     <item android:id="@+id/about"
         android:title="@string/popup_about"/>
 
+    <item android:id="@+id/share"
+        android:title="@string/popup_share_app"/>
+
     <!--<group>-->
 
         <!--<item-->
