@@ -43,6 +43,9 @@
 
     </item>
 
+    <item android:id="@+id/share"
+        android:title="@string/popup_share_app"/>
+
     <!--<group>-->
 
         <!--<item-->
