@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <string name="share_app_title">Invita amici</string>
+    <string name="share_app_message">Fai conoscere ai tuoi amici Canaree</string>
+
+</resources>
