@@ -14,6 +14,7 @@
     <string name="popup_view_album">View album</string>
     <string name="popup_view_artist">View artist</string>
     <string name="popup_share">Share</string>
+    <string name="popup_share_app">Share app</string>
     <string name="popup_set_as_ringtone">Set as ringtone</string>
     <string name="popup_delete">Delete</string>
     <string name="popup_rename">Rename</string>
